Update execute method